# pdftext

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  test.sh
output/: reliance_bbox.json
pdftext/: __init__.py  extraction.py  postprocessing.py  schema.py
pdftext/pdf/: chars.py  links.py  pages.py  utils.py
pdftext/scripts/: __init__.py  extract_text.py
tests/: conftest.py  test_extraction.py
