[project]
name = "pdftext"
version = "0.6.2"
description = "Extract structured text from pdfs quickly"
authors = [
    {name = "Vik Paruchuri", email = "vik.paruchuri@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pdf", "text", "extraction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/VikParuchuri/pdftext"

[project.scripts]
pdftext = "pdftext.scripts.extract_text:extract_text_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
